2003-10-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/arrange_profiles.cpp: use a set<profile_classes> instead
	  of a vector<...> to replace a O(N*M) by a O(N*log(M)) behavior.
	  (N number of samples files, M number of class).

2003-10-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: show filename when warning about no debug
	  information available. get_linenr(): s/filename/source_filename/

2003-10-16  Philippe Elie  <phil.el@wanadoo.fr>

	* events/ia64/itanium/events: counter 0,1 not 2,3 for IA64_INST_RETIRED

	* daemon/opd_util.c: opd_parse_events() fix use after free.

2003-10-16  John Levon  <levon@movementarian.org>

	* daemon/opd_perfmon.c: disable the code

2003-10-15  John Levon  <levon@movementarian.org>

	* daemon/opd_perfmon.c: fflushes to improve
	order of debug log

2003-10-15  John Levon  <levon@movementarian.org>

	* daemon/opd_perfmon.c: fix dumb allocation typo;
	handle signals correctly; wait for children to
	come up before returning

2003-10-15  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_sample_files.c:
	* daemon/opd_mangling.c:
	* daemon/opd_perfmon.c:
	* daemon/opd_util.c: check we not overflow op_nr_counters

2003-10-15  Philippe Elie  <phil.el@wanadoo.fr>

	* events/ia64/itanium/events: correct counter available according
	  to intel doc.

2003-10-15  John Levon  <levon@movementarian.org>

	* dae/opd_image.c:
	* dae/opd_kernel.c:
	* dae/opd_proc.c:
	* dae/opd_sample_files.c:
	* dae/oprofiled.c:
	* daemon/opd_kernel.c:
	* daemon/opd_mangling.c:
	* daemon/opd_sfile.c:
	* daemon/opd_trans.c:
	* daemon/opd_util.c:
	* daemon/opd_util.h:
	* daemon/oprofiled.c: merge the options handling
	for dae and daemon

2003-10-15  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_perfmon.c:
	* module/ia64/op_pmu.c: bit mask for event select field is 8 bits not 7

2003-10-14  John Levon  <levon@movementarian.org>

	* configure.in:
	* m4/findkernel.m4:
	* utils/opcontrol: 2.5 refs -> 2.6
